--- a/Remake_Thief/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Remake_Thief/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -202,13 +202,17 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,GameMapsSet
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
-BP_PlayerCharacter_C=
-PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,
+BP_PlayerCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,
 SkeletalMeshComponent=SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,
 BP_Guard_C=K2Node_VariableGet.DefaultValueCategory.None,
 PointLight=K2Node_VariableGet.DefaultValueCategory.None,
 LocalLightComponent=K2Node_VariableGet.DefaultValueCategory.None,
+BP_HideBox_C=K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
+SceneComponent=
+Character=K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -274,7 +278,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Core/HiddingBoxes
 
 [EditorStartup]
 LastLevel=/Game/Maps/Level_01
@@ -974,6 +978,46 @@ Blockout_Railing_C.Replication=True
 Blockout_Railing_C.Collision=True
 Blockout_Railing_C.Input=True
 Blockout_Railing_C.Actor=True
+BP_HideBox_C.Tick=True
+BP_HideBox_C.Pawn=True
+BP_HideBox_C.Camera=True
+BP_HideBox_C.Replication=True
+BP_HideBox_C.Rendering=True
+BP_HideBox_C.Collision=True
+BP_HideBox_C.Actor=True
+BP_HideBox_C.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+BP_HideBox_C.TransformCommon=True
+K2Node_VariableSet.Events=True
+SceneComponent.Variable=True
+K2Node_GetInputAxisValue.Input=True
+BP_PlayerCharacter_C.Action=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1042,22 +1086,23 @@ UdpMessagingSettings=True
 WmfMediaSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem1=/Game/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem2=/Game/Core/Character/BP_PlayerCharacter
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem4=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem5=/Game/Core/AI/BP_ControlerGuard
-MRUItem6=/Game/Core/AI/BP_BehvaiorThreeGuard
-MRUItem7=/Game/Core/AI/BP_Guard
-MRUItem8=/Game/Maps/Level_01
-MRUItem9=/Game/Core/AI/BP_GuardControler
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem11=/Game/Core/Movement/E_Movement
-MRUItem12=/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem13=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem14=/Game/Core/GameMode/NewBlueprint
-MRUItem15=/Game/Core/GameMode/BP_GameModeThief
+MRUItem0=/Game/Core/Character/BP_PlayerCharacter
+MRUItem1=/Game/Core/HiddingBoxes/BP_HideBox
+MRUItem2=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem3=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem6=/Game/Core/AI/BP_ControlerGuard
+MRUItem7=/Game/Core/AI/BP_BehvaiorThreeGuard
+MRUItem8=/Game/Core/AI/BP_Guard
+MRUItem9=/Game/Maps/Level_01
+MRUItem10=/Game/Core/AI/BP_GuardControler
+MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem12=/Game/Core/Movement/E_Movement
+MRUItem13=/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem14=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
+MRUItem15=/Game/Core/GameMode/NewBlueprint
+MRUItem16=/Game/Core/GameMode/BP_GameModeThief
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1072,12 +1117,14 @@ bHideUnrelatedNodes=False
 /Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin=1
 /Game/Core/Character/BP_PlayerCharacter.BP_PlayerCharacter=1
 /Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=1
+/Game/Core/HiddingBoxes/BP_HideBox.BP_HideBox=1
 
 [WorldBrowser]
 DisplayPaths=False
 DisplayActorsCount=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Core/HiddingBoxes/BP_HideBox.BP_HideBox;
 RecentlyPlaced=/BlockoutToolsPlugin/Blueprints/Blockout_Railing.Blockout_Railing;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -1088,19 +1135,19 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent=
-BP_PlayerCharacter_C="\"Object.CapsuleComponent\" \"Object.CapsuleComponent.Object.BodyInstance\" \"Object.CapsuleComponent.Object.PrimaryComponentTick\" \"Object.CapsuleComponent\" \"Object.CapsuleComponent.Object.BodyInstance\" \"Object.CapsuleComponent.Object.PrimaryComponentTick\" "
-Character="\"Object.CapsuleComponent\" \"Object.CapsuleComponent.Object.BodyInstance\" \"Object.CapsuleComponent.Object.PrimaryComponentTick\" \"Object.CapsuleComponent\" \"Object.CapsuleComponent.Object.BodyInstance\" \"Object.CapsuleComponent.Object.PrimaryComponentTick\" "
-Pawn="\"Object.CapsuleComponent\" \"Object.CapsuleComponent.Object.BodyInstance\" \"Object.CapsuleComponent.Object.PrimaryComponentTick\" \"Object.CapsuleComponent\" \"Object.CapsuleComponent.Object.BodyInstance\" \"Object.CapsuleComponent.Object.PrimaryComponentTick\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BP_PlayerCharacter_C="\"Object.CapsuleComponent\" \"Object.CapsuleComponent\" "
+Character="\"Object.CapsuleComponent\" \"Object.CapsuleComponent\" "
+Pawn=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0]\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1135,11 +1182,14 @@ MagicLeapARPinSettings="\"Object.ARPin.OnUpdatedEventTriggerDelta\" "
 MovieRenderPipelineProjectSettings="\"Object.Movie Render Pipeline.DefaultClasses\" "
 NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
-PointLight="\"Object.PointLightComponent\" \"Object.PointLightComponent.Object.LightmassSettings\" \"Object.PointLightComponent.Object.PrimaryComponentTick\" \"Object.PointLightComponent\" \"Object.PointLightComponent.Object.LightmassSettings\" \"Object.PointLightComponent.Object.PrimaryComponentTick\" "
-Light="\"Object.PointLightComponent\" \"Object.PointLightComponent.Object.LightmassSettings\" \"Object.PointLightComponent.Object.PrimaryComponentTick\" \"Object.PointLightComponent\" \"Object.PointLightComponent.Object.LightmassSettings\" \"Object.PointLightComponent.Object.PrimaryComponentTick\" "
+PointLight=
+Light=
 LocalLightComponent="\"Object.AttenuationRadius\" \"Object.AttenuationRadius\" "
 LightComponent="\"Object.AttenuationRadius\" \"Object.AttenuationRadius\" "
 LightComponentBase="\"Object.AttenuationRadius\" \"Object.AttenuationRadius\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BP_HideBox_C=
 
 [DetailCategoriesAdvanced]
 UserDefinedEnum.Enumerators=False
@@ -1197,7 +1247,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/GS-Bachelor-Master/Documents/Unreal Projects/Remake_Thief/Content/Maps
+UNR=../../../../../../Users/GS-Bachelor-Master/Documents/Unreal Projects/Thief_Remake_Git/Thief_Remake/Remake_Thief/Content/Maps
 BRUSH=../../../../../../Users/GS-Bachelor-Master/Documents/Unreal Projects/Remake_Thief/Content/
 FBX=../../../../../../Users/GS-Bachelor-Master/Documents/Unreal Projects/Remake_Thief/Content/
 FBXAnim=../../../../../../Users/GS-Bachelor-Master/Documents/Unreal Projects/Remake_Thief/Content/
@@ -2030,7 +2080,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2038,4 +2088,7 @@ bHideUnrelatedNodes=False
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
 InstalledPlugins=PivotTool
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
